tests/agl/rejections/type/ctor_positional_literal.agl
record R
  *
  x: int
let r = R(1)
print r.x
